--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ a:hover{
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="https://subrat.w3spaces.com/SubratBarik.png" style="width:100%" alt="Avatar">
+          <img src="https://github.com/SubratBarik/resume/blob/main/DP.jpg" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h1>Subrat Kumar Barik</h1>
           </div>
@@ -221,7 +221,6 @@ a:hover{
   <a href="https://www.facebook.com/reach4sky" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
   <a href="https://twitter.com/subrat4kolkata" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
   <a href="https://www.linkedin.com/in/subrat-kumar-barik-695bb711/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">W3.CSS</a></p>
 </footer>
 <script>
 function myFunction(id) {
