LinkedIn link updated in index.html

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ a:hover{
   <p>Find me on social media</p>
   <a href="https://www.facebook.com/reach4sky" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
   <a href="https://twitter.com/subrat4kolkata" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
-  <a href="https://www.linkedin.com/in/subrat-kumar-barik-695bb711/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+  <a href="https://www.linkedin.com/in/dev-subratbarik/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
 </footer>
 <script>
 function myFunction(id) {
