--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ a:hover{
     
       <div class="w3-white w3-text-grey w3-card-4">
         <div class="w3-display-container">
-          <img src="https://github.com/SubratBarik/resume/blob/main/DP.jpg" style="width:100%" alt="Avatar">
+          <img src="../DP.jpg" style="width:100%" alt="Subrat Kumar Barik">
           <div class="w3-display-bottomleft w3-container w3-text-black">
             <h1>Subrat Kumar Barik</h1>
           </div>
