--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                     <div class="personal-info-value">Indian</div>
                 </div>
                 <div class="personal-info-item">
-                    <div class="personal-info-label">Languages Known:</div>
+                    <div class="personal-info-label">Languages:</div>
                     <div class="personal-info-value">English, Hindi, Bengali, Odia</div>
                 </div>
                 <div class="personal-info-item">
