--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
             <div class="section-title">Awards & Achievements</div>
             <ul class="awards-list">
                 <li>
-                    <div class="award-title">Raising Leader Award (2023)</div>
+                    <div class="award-title">Raising Leader Award, Block Stack (2023)</div>
                     <div class="award-details">Received for exceptional team performance and project deliverables</div>
                 </li>
                 <li>
