Updated MCA college name

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
             
             <div class="education-item">
                 <div class="education-title">Master of Computer Applications (MCA)</div>
-                <div class="education-details">Orissa Computer Academy, BPUT University (BBSR) - 2011 | 76.70%</div>
+                <div class="education-details">KEC Bhubaneswar, BPUT University (Rourkela) - 2011 | 76.70%</div>
             </div>
             
             <div class="education-item">
